0.24.2	UNRELEASED

 * Fix worktree CLI tests to properly change to repository directory.
   (Jelmer Vernooĳ, #1738)

 * Add ``temporary_worktree`` context manager for creating temporary worktrees
   that are automatically cleaned up. (Jelmer Vernooĳ)

 * Add ``exist_ok`` parameter to ``add_worktree`` to allow creation with
   existing directories. (Jelmer Vernooĳ)

 * Add colorized diff support for the ``show`` command with ``--color``
   argument. (Jelmer Vernooĳ, #1741)

 * Fix Windows path handling in ``_ensure_parent_dir_exists`` to correctly
   handle drive letters during checkout operations. (Jelmer Vernooĳ, #1751)

 * Fix Windows config loading to only use current Git config path,
   avoiding loading older config files.  (Jelmer Vernooĳ, #1732)

 * Add interactive rebase support with ``git rebase -i``, including support
   for pick, reword, edit, squash, fixup, drop, exec, and break commands.
   (Jelmer Vernooĳ, #1696)

0.24.1	2025-08-01

 * Require ``typing_extensions`` on Python 3.10.
   (Jelmer Vernooĳ, #1735)

0.24.0	2025-08-01

 * Split out ``WorkTree`` from ``Repo``. (Jelmer Vernooĳ)

 * Add comprehensive git worktree support including ``WorkTreeContainer``
   class, ``WorkTreeInfo`` objects, and full CLI/porcelain implementations
   for add, list, remove, prune, lock, unlock, and move operations.
   (Jelmer Vernooĳ, #1710, #1632)

 * Add support for ``-a`` argument to
   ``dulwich.cli.commit``. (Jelmer Vernooĳ)

 * Add support for ``--amend`` argument to
   ``dulwich.cli.commit`` and ``dulwich.porcelain.commit``. (Jelmer Vernooĳ)

 * Add support for merge drivers.
   (Jelmer Vernooĳ)

 * Add support for Git revision syntax operators ``~``, ``^``, ``^{}``,
   ``@{N}``, and ``:path`` in ``dulwich.objectspec.parse_object``,
   e.g. ``HEAD~1``, ``HEAD^2``, ``v1.0^{}``, ``HEAD@{1}``, ``HEAD:README``.
   (Jelmer Vernooĳ)

 * Add support for ``GIT_CONFIG_GLOBAL`` and ``GIT_CONFIG_SYSTEM``
   environment variables to override global and system configuration